# mindspore

./: .gitmodules  CMakeLists.txt  test_mindspore.py
GeeSibling/: BUILD.bazel  CMakeLists.txt  Doxyfile  WORKSPACE.bazel
GeeSibling/.github/ISSUE_TEMPLATE/: feature-request.md
GeeSibling/bazel/: tf.patch  workspace0.bzl  workspace1.bzl
GeeSibling/ccsrc/DistributedIR/: CMakeLists.txt  block.cc  dividegraph.cpp
GeeSibling/ccsrc/DistributedIR/python/: CMakeLists.txt  graph.cc
GeeSibling/ccsrc/common/: CMakeLists.txt
GeeSibling/ccsrc/policy/: CMakeLists.txt
GeeSibling/ccsrc/policy/fd-dps/: fddps_algorithm.cc
GeeSibling/ccsrc/policy/sgp/: graphPartition.cc
GeeSibling/examples/: mnist.py
GeeSibling/python/geesibling/core/: types.py
GeeSibling/python/geesibling/tools/: graph_dot.py  log.py
GeeSibling/tests/ut/: test_DistributedIR.cc  test_common.cc  test_cost_graph.cc  test_fddps.cc
GeeSibling/tools/: tf_run_graph.cc
graphengine/910/metadef/: .clang-format  .gitignore  CMakeLists.txt  OWNERS  README.md  build.sh  update_newest_packages.sh
graphengine/910/metadef/cmake/: build_type.cmake  common_funcs.cmake  intf_pub_linux.cmake  test_funcs.cmake
graphengine/910/metadef/error_manager/: CMakeLists.txt  error_code.json  error_manager.cc
graphengine/910/metadef/exe_graph/: CMakeLists.txt
graphengine/910/metadef/graph/: CMakeLists.txt  aligned_ptr.cc  anchor.cc  any_value.cc  ascend_string.cc  attr_store.cc  axis_type_info.cc  buffer.cc  buffer_impl.h  compute_graph.cc  compute_graph_impl.h  format_refiner.cc  format_refiner.h  ge_attr_define.cc  ge_attr_value.cc  ge_tensor.cc  ge_tensor_impl.h  gnode.cc  graph.cc  inference_context.cc  ir_data_type_symbol_store.cc  ir_data_type_symbol_store.h  ir_definitions_recover.cc  ir_meta.cc  ir_meta.h  model.cc  model_serialize.cc  node.cc  node_impl.h  op_desc.cc  op_desc_impl.h  operator.cc  operator_factory_impl.cc  operator_impl.cc  profiler.cc  ref_relation.cc  resource_context_mgr.cc  runtime_inference_context.cc  shape_refiner.cc  small_vector.cc  (+5 more)
graphengine/910/metadef/inc/: CMakeLists.txt
graphengine/910/metadef/ops/: op_imp.cpp
graphengine/910/metadef/proto/: CMakeLists.txt  dflow.proto  flow_model.proto  op_mapping.proto  task.proto
graphengine/910/metadef/register/: CMakeLists.txt  auto_mapping_util.cpp  auto_mapping_util.h  ffts_node_calculater_registry.cc  ffts_node_converter_registry.cc  ffts_plus_update_manager.cc  host_cpu_context.cc  kernel_register_data.cc  kernel_register_data.h  kernel_registry_impl.cc  node_converter_registry.cc  op_impl_register_v2_impl.h  op_impl_registry.cc  op_impl_registry_holder_manager.cc  op_impl_space_registry.cc  op_kernel_registry.cpp  ops_kernel_builder_registry.cc  prototype_pass_registry.cc  register.cpp  register_pass.cpp  shape_inference.cc  tensor_assign.cpp  tuning_bank_key_registry.cc  tuning_tiling_registry.cc
graphengine/910/metadef/tests/: CMakeLists.txt
graphengine/metadef/: .gitignore  CMakeLists.txt  OWNERS  build.sh  classify_rule.yaml
graphengine/metadef/cmake/: FindModule.cmake  build_type.cmake  common_funcs.cmake  test_funcs.cmake
graphengine/metadef/cmake/external_libs/: gbenchmark.cmake  gtest.cmake  json.cmake  protobuf_static.cmake
graphengine/metadef/docs/: Doxyfile
graphengine/metadef/error_manager/: CMakeLists.txt  error_code.json  error_manager.cc
graphengine/metadef/exe_graph/: CMakeLists.txt
graphengine/metadef/exe_graph/lowering/: bg_ir_attrs.cc  bg_kernel_context_extend.cc  buffer_pool.cc  lowering_global_data.cc  value_holder.cc
graphengine/metadef/exe_graph/runtime/: compute_node_info.cc  getcdim.cc  kernel_run_context_builder.cc  kernel_run_context_builder.h  runtime_attrs.cc  runtime_attrs_def.h  tiling_data.cc
graphengine/metadef/graph/: CMakeLists.txt  aligned_ptr.cc  anchor.cc  ascend_string.cc  buffer.cc  compute_graph.cc  compute_graph_impl.h  format_refiner.cc  format_refiner.h  ge_attr_define.cc  ge_attr_value.cc  ge_tensor.cc  ge_tensor_impl.h  gnode.cc  graph.cc  ir_data_type_symbol_store.cc  ir_data_type_symbol_store.h  ir_meta.cc  ir_meta.h  model_serialize.cc  node.cc  op_desc.cc  op_desc_impl.h  operator.cc  operator_factory_impl.cc  operator_impl.cc  operator_impl.h  ref_relation.cc  shape_refiner.cc  tensor.cc  tensor_type_impl.h  types.cc
graphengine/metadef/graph/common/: hyper_status.cc  plugin_so_manager.cc
graphengine/metadef/graph/compile_cache_policy/: compile_cache_desc.cc  compile_cache_state.cc  policy_register.cc
graphengine/metadef/graph/debug/: ge_op_types.h  ge_util.h
graphengine/metadef/graph/opsproto/: opsproto_manager.cc
graphengine/metadef/graph/option/: ge_context.cc
graphengine/metadef/graph/utils/: connection_matrix.cc  connection_matrix_impl.h  constant_utils.cc  ffts_graph_utils.cc  file_utils.cc  ge_ir_utils.cc  ge_ir_utils.h  graph_utils.cc  node_utils.cc  op_desc_utils.cc  tensor_utils.cc  transformer_utils.cc  transformer_utils.h  tuning_utils.cc  type_utils.cc
graphengine/metadef/inc/: CMakeLists.txt
graphengine/metadef/inc/common/: checker.h  hyper_status.h  plugin_so_manager.h  sgt_slice_type.h
graphengine/metadef/inc/graph/: any_value.h  ascend_limits.h  attr_store.h  attr_value_serializable.h  axis_type_info.h  compute_graph.h  def_types.h  ge_attr_value.h  ge_context.h  ge_local_context.h  ge_tensor.h  graph_util.h  hash_utils.h  model.h  node.h  object_pool.h  op_desc.h  op_kernel_bin.h  op_types.h  small_vector.h  tuning_utils.h
graphengine/metadef/inc/register/: custom_pass_helper.h  ffts_plus_task_update.h  ffts_plus_update_manager.h  host_cpu_context.h  op_kernel_registry.h  (+6 more)
graphengine/metadef/proto/: CMakeLists.txt  op_mapping.proto  task.proto
graphengine/metadef/register/: CMakeLists.txt  auto_mapping_util.cpp  auto_mapping_util.h  ffts_plus_update_manager.cc  host_cpu_context.cc  kernel_registry_impl.cc  node_converter_registry.cc  op_impl_registry.cc  op_kernel_registry.cpp  ops_kernel_builder_registry.cc  prototype_pass_registry.cc  register.cpp  register_pass.cpp  tensor_assign.cpp
graphengine/metadef/tests/: CMakeLists.txt
(+704 files in other folders)
