workspace(name = "geesibling")

load("//:bazel/workspace0.bzl", "geesibling_workspace0")
geesibling_workspace0()

load("//:bazel/workspace1.bzl", "geesibling_workspace1")
geesibling_workspace1()


load("@org_tensorflow//tensorflow:workspace3.bzl", "tf_workspace3")

tf_workspace3()

load("@org_tensorflow//tensorflow:workspace2.bzl", "tf_workspace2")

tf_workspace2()

load("@org_tensorflow//tensorflow:workspace1.bzl", "tf_workspace1")

tf_workspace1()

load("@org_tensorflow//tensorflow:workspace0.bzl", "tf_workspace0")

tf_workspace0()
